# Riemann-Hypothesis

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  book.toml  pyproject.toml
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-04-27-riemann-hypothesis-scaffold.md
docs/superpowers/specs/: 2026-04-27-riemann-hypothesis-design.md
lean/: README.md  lean-basics.md
lean/lean-rh/: RiemannHypothesis.lean  lake-manifest.json  lakefile.lean
lean/lean-rh/RiemannHypothesis/: Basic.lean
reading/: README.md
riemann-viz/: .gitignore  README.md  pyproject.toml
riemann-viz/src/riemann_viz/: __init__.py  app.py  cli.py  config.py  models.py
riemann-viz/src/riemann_viz/compute/: __init__.py  zeros.py  zeta_grid.py
riemann-viz/src/riemann_viz/plotting/: __init__.py  contour_plotter.py
riemann-viz/tests/: test_app.py  test_cli.py  test_config.py  test_grid_shape.py  test_plotting.py  test_zeros.py
scripts/: check-frontmatter.py  check-links.sh
src/: index.html  macros.tex  references.bib
src/assets/: manifest.sha256
src/assets/scripts/: appendix_gaussian_primes.py  plot_all.py
src/en/: SUMMARY.md  bibliography.md  index.md  preface.md
src/en/appendix/: gaussian-primes.md  reading-roadmap.md  why-rh-is-hard.md
src/en/part-01-life/: chapter-01-young-riemann.md  chapter-02-goettingen.md  chapter-03-collected-works.md  chapter-04-legacy.md
src/en/part-02-foundations/: chapter-05-real-numbers.md  (+6 more)
src/zh/: SUMMARY.md  bibliography.md  index.md  preface.md
tests/: test_plot_all.py
theme/: book.js
theme/css/: custom.css
(+56 files in other folders)
