[project]
name = "riemann-viz"
version = "0.1.0"
description = "Professional Riemann zeta function visualization toolkit"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "mpmath>=1.3",
    "matplotlib>=3.8",
    "typer>=0.9",
]

[project.scripts]
riemann-viz = "riemann_viz.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riemann_viz"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
